--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ header nav ul li a:hover {
 
 /* hero styling start */
 .hero {
-    background-image: url
+    background-image: url('../images/desertpic.jpg');
     height: 600px;
     background-size: cover;
     background-position: center;
@@ -182,25 +182,25 @@ header nav ul li a:hover {
 .horiseonrefactor {
     grid-column: 1/3;
     grid-row: span 2;
-    background-image: url
+    background-image: url('../images/htmlpic.jpg');
 }
 
 .project2 {
-    background-image: url
+    background-image: url("../images/mountainpic.jpg");
     background-position: 50% 15%;
 }
 
 .project3 {
-    background-image: url
+    background-image: url('../images/desertpic.jpg');
     background-position: 60% 50%;
 }
 
 .project4 {
-    background-image: url
+    background-image: url('../images/oceanpic.jpg');
 }
 
 .project5 {
-    background-image: url
+    background-image: url('../images/skypic.jpg');
 }
 
 .project-label {
@@ -350,3 +350,4 @@ footer ul li a:hover {
     }
     
 }
+
