added team poject to "My Work"/updated html/css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ header nav ul li a:hover {
     background-image: url('../images/htmlpic.jpg');
 }
 
-.project2 {
+.frontend {
     background-image: url("../images/mountainpic.jpg");
     background-position: 50% 15%;
 }
